feat: Add conservation section to 12.1.355.11

--- a/law/Rainychville_Crocodile_Protection_Act.adoc
+++ b/law/Rainychville_Crocodile_Protection_Act.adoc
@@ -49,6 +49,21 @@ national parks; and
 oversee the medical care of Rainychville crocodiles and wildlife under the
 jurisdiction of the RWS.
 
+== CONSERVATION MEASURES.
+. No structure shall be built that impedes the movement, migration, or
+locomotion of the Rainychville crocodile including but not limited to
+walls, fences, watchtowers, except where the structure is:
+["arabic"]
+.. intended to protect the Rainychville crocodile; or
+.. intended to prevent the Rainychville crocodile from harming any human
+being or destroying property.
+. No Rainychville crocodile shall be poached or it's body parts used as
+a souvenir, medicine, or sold, except where the collection process of
+such body part does not cause significant pain to the crocodile.
+. Tracking devices may only be implemented on specific instances of Rainychville
+crocodiles if the implantation of such a tracking device is important,
+beneficial, or critical to a scientific study,
+
 
 ***
 
