--- a/law/Rainychville_Crocodile_Protection_Act.adoc
+++ b/law/Rainychville_Crocodile_Protection_Act.adoc
@@ -54,15 +54,25 @@ jurisdiction of the RWS.
 locomotion of the Rainychville crocodile including but not limited to
 walls, fences, watchtowers, except where the structure is:
 ["arabic"]
-.. intended to protect the Rainychville crocodile; or
-.. intended to prevent the Rainychville crocodile from harming any human
-being or destroying property.
-. No Rainychville crocodile shall be poached or it's body parts used as
-a souvenir, medicine, or sold, except where the collection process of
-such body part does not cause significant pain to the crocodile.
-. Tracking devices may only be implemented on specific instances of Rainychville
-crocodiles if the implantation of such a tracking device is important,
-beneficial, or critical to a scientific study,
+.. intended to protect the Rainychville crocodile from harm caused by human
+beings, machines; except where the harm is caused by:
+["arabic"]
+... disease, where:
+["arabic"]
+.... it cannot be prevented at reasonable or practical cost
+or benefit to the crocodile, humanity, the Rainychville Government,
++++<del>+++it's natural prey+++</del>+++, +++<del>+++ or God+++</del>+++;
+... natural events;
+... +++<del>+++acts of God+++</del>+++;
+... attacks or hostility from it's natural predators; or
+.. intended to prevent the Rainychville crocodile from harming any human being
+or destroying property.
+. No Rainychville crocodile shall be poached or it's body parts used as a
+souvenir, medicine, or sold, except where the collection process of such body
+part does not cause significant pain to the crocodile.
+. Tracking devices may only be implemented on specific instances of
+Rainychville crocodiles if the implantation of such a tracking device is
+important, beneficial, or critical to a scientific study,
 
 
 ***
