feat(law): allow the rws to form more divisions

--- a/law/Rainychville_Crocodile_Protection_Act.adoc
+++ b/law/Rainychville_Crocodile_Protection_Act.adoc
@@ -47,7 +47,9 @@ national parks, while keeping a safe distance from Rainychville crocodiles;
 national parks; and
 .. the Rainychville Wildlife Veterinarian Service (RWVS), which shall
 oversee the medical care of Rainychville crocodiles and wildlife under the
-jurisdiction of the RWS.
+jurisdiction of the RWS; and
+.. other parts of the Rainychville Wildlife Service, which may be formed at
+the discretion of the Service.
 
 == CONSERVATION MEASURES.
 . No structure shall be built that impedes the movement, migration, or
