--- a/orders/Weekly_QOTW.adoc
+++ b/orders/Weekly_QOTW.adoc
@@ -11,9 +11,10 @@ The Rainychville Government,
 *RECOGNIZING* the lack of motivation for answering or providing answers to
 daily QOTD questions published daily;
 
-*RECOGNIZING* that Sebby is lazy, and likely suffers from an extreme form of
-writer's block, alongside other symptoms that may render him incapable of
-producing Q&A questions daily,
+*RECOGNIZING* that Sebby +++<del>+++is lazy, and likely suffers from an
+extreme form of writer's block, alongside other symptoms that may render him
+incapable of producing Q&A questions daily+++</del>+++ is unable to publish
+new questions everyday,
 
 HEREBY:
 
