Amend 4.2 in RCPA

--- a/law/Rainychville_Crocodile_Protection_Act.adoc
+++ b/law/Rainychville_Crocodile_Protection_Act.adoc
@@ -71,7 +71,8 @@ or benefit to the crocodile, humanity, the Rainychville Government,
 or destroying property.
 . No Rainychville crocodile shall be poached or it's body parts used as a
 souvenir, medicine, or sold, except where the collection process of such body
-part does not cause significant pain to the crocodile.
+part does not cause significant pain to the crocodile, harm its health or
+ability to reproduce, or result in the endangerment of a human.
 . Tracking devices may only be implemented on specific instances of
 Rainychville crocodiles if the implantation of such a tracking device is
 important, beneficial, or critical to a scientific study,
